style/taskDetail.css
/* dialog open/close*/
dialog {
    transform: translateX(calc(100vh + 800px));
}

dialog.opend {
    transform: translateX(0px);
    transition: all 0.1s ease-in;
}

dialog.closed {
    transform: translateX(calc(100vh + 800px));
    transition: all 0.1s ease-in;
}

dialog::backdrop {
    opacity: 0;
    background-color: rgb(0, 0, 0);
    transition: all 0.1s ease-in;
}

dialog.opend::backdrop {
    opacity: 0.7;
    transition: all 0.1s ease-in;
    cursor: pointer;
}

dialog.closed::backdrop {
    opacity: 0;
    transition: all 0.5s ease-in;
}

.allTaskDetails {
    border-radius: 30px;

}

.allTaskDetails header section {
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.taskCatagory {
    color: var(--GlobalWhite);
    padding: 4px 24px 4px 24px;
    border-radius: 8px;
}

.allTaskDetails h1 {
    font-size: 61px;
    margin: 0;
    margin-top: 20px;
    font-weight: 700;
}

.allTaskDetails h2 {
    color: var(--GlobalBlue);
    margin: 0;
    font-weight: 400;
}

.allTaskDetails td {
    font-size: 20px;
    padding-bottom: 25px;
}

.allTaskDetails p,
.allTaskDetails h1 {
    overflow-wrap: anywhere;
    word-break: break-word;
}

.closeDialogX {
    cursor: pointer;
    width: 20px;
    text-align: center;
}

.closeDialogX:hover {
    background-color: var(--CircleBadgeGray);
    border-radius: 50%;
    width: 20px;
}

.taskDetailsST {
    margin-bottom: 4px !important;
}

.taskDetailsIcons {
    display: flex;
    align-items: center;
    justify-content: flex-end;
    gap: 5px;
    color: var(--GlobalBlue);
    font-size: 19px;
    margin-bottom: 15px;
    padding-right: 20px;
}

.taskDetailsIcons:hover {
    color: var(--GlobalLightBlue);
    cursor: pointer;
}

.taskDetailsIcons img {
    height: 19px;
}

.taskDetailsIcons .edit {
    border-left: 1px #D1D1D1 solid;
    padding-left: 8px;
}

.taskDetailsIcons .trash {
    padding-right: 8px;
}

.subTasks {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: flex-start;
    margin-bottom: 20px;
    max-height: 200px;
    overflow: auto;
    padding-left: 16px;
}

.subTasks span {
    display: flex;
    gap: 13px;
    padding-bottom: 15px;
    padding-top: 10px;
}

#taskDetailsAT {
    margin-top: 8px;
    margin-bottom: 15px;
    max-height: 200px;
    overflow: auto;
    padding-left: 16px;
}

.taskDetailsATContainer {
    display: flex;
    align-items: center;
    gap: 13px;
    padding-bottom: 15px;
}

.taskDetailsATContainer span:not(:first-child) {
    font-size: 20px;
}

.maxWith525 {
    max-width: 525px;
}

.minWith350 {
    min-width: 350px;
}

.allContent {
    padding-left: 20px;
    padding-right: 20px;
    padding-top: 20px;
}

.allPriority {
    justify-content: unset;
}

.descriptionSize {
    font-size: 20px;
}

@media(max-width:750px) {

    .allTaskDetails h1 {
        font-size: 36px;
    }

    .descriptionSize {
        font-size: 16px;
    }

    .allTaskDetails h2 {
        font-size: 16px;
    }

    .allTaskDetails td {
        font-size: 16px;
    }

    .taskDetailsATContainer span:not(:first-child) {
        font-size: 16px;
    }

    .taskDetailsIcons {
        font-size: 16px;
    }

    .allContent {
        padding-left: 16px;
        padding-right: 16px;
        padding-top: 16px;
    }

    .taskDetailsIcons{
        margin-bottom: 10px;
        padding-right: 16px;
    }
}

@media(max-width:599px) {
    dialog {
        max-width: 400px;
    }
}

@media(max-width:460px) {

    dialog {
        max-width: 300px;
    }

    .maxWith525 {
        max-width: 100%;
    }

    .minWith350 {
        min-width: 0;
    }

    .allTaskDetails h1 {
        font-size: 30px;
    }

}

@media(max-width:380px) {

    dialog {
        max-width: 250px;
    }
}

